[package]
name = "ktracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.10"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.12", features = ["env-filter"] }